fix(switch): correctly adjust when label will not fit on one line
Closes #80

--- a/src/components/radioButton/_radio-button.scss
+++ b/src/components/radioButton/_radio-button.scss
@@ -2,6 +2,7 @@
 material-radio-button,
 .material-switch-thumb { // Used in switch
   display: block;
+  margin: 15px;
   white-space: nowrap;
   cursor: pointer;
 
